--- a/tox.ini
+++ b/tox.ini
@@ -28,4 +28,4 @@ skipsdist = True
 deps =
 	-r{toxinidir}/tests/requirements.txt
 	isort
-commands = isort --recursive --check-only --diff flask_saml2/ tests/ examples/
+commands = isort --check-only --diff flask_saml2/ tests/ examples/
